added hyperlinks to footer, icons, and added options to <select> tag

--- a/index.html
+++ b/index.html
@@ -23,21 +23,29 @@
             cut any unnecessary expenses. Simply join today to get started!
           </p>
           <div class="pictures">
-            <img
-              class="icons"
-              src="images/logo-google-play.png"
-              alt="Logotype for Google Play application"
-            />
-            <img
-              class="icons"
-              src="images/logo-apple-appstore.png"
-              alt="Logotype for Appstope application"
-            />
-            <img
-              class="icons"
-              src="images/logo-windows.png"
-              alt="Logotype for Windows"
-            />
+            <a href="#">
+              <img
+                class="icons"
+                src="images/logo-google-play.png"
+                alt="Logotype for Google Play application"
+              />
+            </a>
+
+            <a href="#">
+              <img
+                class="icons"
+                src="images/logo-apple-appstore.png"
+                alt="Logotype for Appstope application"
+              />
+            </a>
+
+            <a href="#">
+              <img
+                class="icons"
+                src="images/logo-windows.png"
+                alt="Logotype for Windows"
+              />
+            </a>
           </div>
         </div>
         <div class="bunner">
@@ -81,6 +89,9 @@
           />
           <select id="select">
             <option value="select">Select Service</option>
+            <option value="select">Overview</option>
+            <option value="select">Features</option>
+            <option value="select">Privecy</option>
           </select>
           <button class="btn">Submit now</button>
         </div>
@@ -98,11 +109,11 @@
           <h4>Services</h4>
           <div class="list-services">
             <ul>
-              <li>Overview</li>
-              <li>Features</li>
-              <li>Technology</li>
-              <li>Terms & Conditions</li>
-              <li>Privecy</li>
+              <a href="#"><li>Overview</li></a>
+              <a href="#"><li>Features</li></a>
+              <a href="#"><li>Technology</li></a>
+              <a href="#"><li>Terms & Conditions</li></a>
+              <a href="#"><li>Privecy</li></a>
             </ul>
           </div>
         </div>
@@ -111,21 +122,27 @@
           <p class="mail">info@cloudbudget.com</p>
           <p class="number">+1 844-721-7120</p>
           <div class="media">
-            <img
-              class="icons-media"
-              src="images/feather-facebook.png"
-              alt="Logotype od Facebook"
-            />
-            <img
-              class="icons-media"
-              src="images/feather-linkedin.png"
-              alt="Logotype of Linkedin"
-            />
-            <img
-              class="icons-media"
-              src="images/feather-twitter.png"
-              alt="Logotype of Twitter"
-            />
+            <a href="#">
+              <img
+                class="icons-media"
+                src="images/feather-facebook.png"
+                alt="Logotype od Facebook"
+              />
+            </a>
+            <a href="#">
+              <img
+                class="icons-media"
+                src="images/feather-linkedin.png"
+                alt="Logotype of Linkedin"
+              />
+            </a>
+            <a href="#">
+              <img
+                class="icons-media"
+                src="images/feather-twitter.png"
+                alt="Logotype of Twitter"
+              />
+            </a>
           </div>
         </div>
         <div class="payment">
