--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
           <h4>Services</h4>
           <div class="list-services">
             <ul>
-              <a href="#"><li>Overview</li></a>
-              <a href="#"><li>Features</li></a>
-              <a href="#"><li>Technology</li></a>
-              <a href="#"><li>Terms & Conditions</li></a>
-              <a href="#"><li>Privecy</li></a>
+              <li><a href="#">Overview</a></li>
+              <li><a href="#">Features</a></li>
+              <li><a href="#">Technology</a></li>
+              <li><a href="#">Terms & Conditions</a></li>
+              <li><a href="#">Privecy</a></li>
             </ul>
           </div>
         </div>
